fix gallery subtitle width on small screens

--- a/less/theme.less
+++ b/less/theme.less
@@ -200,3 +200,8 @@ a.makePublicLink {
         padding-bottom: 64px;
     }
 }
+
+/* fix gallery subtitle width on small screens */
+#gallery-container > div.panel-heading.clearfix > div.row.clearfix > div.col-sm-12 {
+    width: 100%;
+}
